--- a/uri-tcc.tex
+++ b/uri-tcc.tex
@@ -33,32 +33,35 @@
 \imprimirfolhaderosto{}                                     		   % Comando para imprimir Folha de rosto
 % \imprimirfolhadeaprovacao
 % INSERE ELEMENTOS PRÉ-TEXTUAIS
-\include{text-elements/pre-textuais/dedicatoria}          			   % Dedicatória
-\include{text-elements/pre-textuais/agradecimentos}        			   % Agradecimentos
-\include{text-elements/pre-textuais/epigrafe}              			   % Epígrafe
+%\include{text-elements/pre-textuais/dedicatoria}          			   % Dedicatória
+%\include{text-elements/pre-textuais/agradecimentos}        			   % Agradecimentos
+%\include{text-elements/pre-textuais/epigrafe}              			   % Epígrafe
 \include{text-elements/pre-textuais/resumo}             			   % Resumo em Português
 \include{text-elements/pre-textuais/abstract}             		           % Resumo em Inglês
 \include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-figuras}   % Lista de Figuras
 \include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
 \include{text-elements/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
 \include{text-elements/pre-textuais/listas/lista-siglas}          		   % Lista de Abreviaturas e Siglas
-\include{text-elements/pre-textuais/listas/lista-simbolos}        		   % Lista de Símbolos
-\include{text-elements/pre-textuais/listas/listas-diversas/lista-algoritmos}   % Lista de Algoritmos
+%\include{text-elements/pre-textuais/listas/lista-simbolos}        		   % Lista de Símbolos
+%\include{text-elements/pre-textuais/listas/listas-diversas/lista-algoritmos}   % Lista de Algoritmos
 \include{text-elements/pre-textuais/sumario}               			   % Sumário
 
 \textual
 % INSERE ELEMENTOS TEXTUAIS
-\include{text-elements/textuais/introducao}                		           % Introdução
-\include{text-elements/textuais/desenvolvimento/revisao-de-literatura}         % Revisão de Literatura
-\include{text-elements/textuais/desenvolvimento/metodologia}                   % Metodologia
-\include{text-elements/textuais/desenvolvimento/resultados}                    % Resultados
-\include{text-elements/textuais/desenvolvimento/orientacoes}                   % Capítulo com Orientações de uso do Template
-\include{text-elements/textuais/conclusao}                 			   % Conclusão
+\include{text-elements/textuais/introducao}
+\include{text-elements/textuais/desenvolvimento/tecnologias}
+\include{text-elements/textuais/desenvolvimento/ferramentas}
+%\include{text-elements/textuais/desenvolvimento/revisao-de-literatura}         
+\include{text-elements/textuais/desenvolvimento/desenvolvimento}
+\include{text-elements/textuais/desenvolvimento/descricao-sistema}
+%\include{text-elements/textuais/desenvolvimento/resultados}                    
+%\include{text-elements/textuais/desenvolvimento/orientacoes}                   
+\include{text-elements/textuais/conclusao}
 
 \postextual
 % INSERE ELEMENTOS PÓS-TEXTUAIS
-\include{text-elements/pos-textuais/referencias}           			   % Referências
-\include{text-elements/pos-textuais/apendices}             			   % Apêndices
-\include{text-elements/pos-textuais/anexos}               			   % Anexos
+\include{text-elements/pos-textuais/referencias}
+\include{text-elements/pos-textuais/apendices}
+%\include{text-elements/pos-textuais/anexos}
 
 \end{document}
