--- a/text-elements/pre-textuais/capa.tex
+++ b/text-elements/pre-textuais/capa.tex
@@ -8,12 +8,12 @@
 % \departamento{}
 
 % DADOS DO TRABALHO--------------------------------------------------------------------------------------
-\titulo{Título do Trabalho: Subtítulo do Trabalho}
-\titleabstract{Title in English}
-\autor{Nome Completo do Autor}
-\autorcitacao{SOBRENOME, Nome} % Sobrenome em maiúsculo
+\titulo{Gerenciamento e Acompanhamento de Rotas de Entrega}
+\titleabstract{Delivery Routes Management and Tracking}
+\autor{Gabriel Paulo Capoan Cechet}
+\autorcitacao{CECHET, Gabriel} % Sobrenome em maiúsculo
 \local{ERECHIM - RS}
-\data{2018}
+\data{2019}
 
 % NATUREZA DO TRABALHO-----------------------------------------------------------------------------------
 % Opções: 
@@ -48,7 +48,7 @@
 %\logoinstituicao{0.2}{dados/figuras/logo-instituicao.png} 
 
 % DADOS DOS ORIENTADORES---------------------------------------------------------------------------------
-\orientador{Nome do orientador}
+\orientador{Prof. Dr. Guilherme Afonso Madalozzo}
 %\orientador[Orientadora:]{Nome da orientadora}
 \instOrientador{Instituição do orientador}
 
