--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -1,8 +1,22 @@
 % LISTA DE ABREVIATURAS E SIGLAS----------------------------------------------------------
 
 \begin{siglas}
-    \item[ABNT] Associação Brasileira de Normas Técnicas
-    \item[DECOM] Departamento de Computação
+    \item[3D] Computação Gráfica Tridimensional
+    \item[3G] Terceira Geração de Padrões e Tecnologias de Telefonia Móvel
+    \item[A-GPS] \textit{Assisted Global Positioning System}
+    \item[AJAX] \textit{Asynchronous JavaScript and XML}
+    \item[API] \textit{Application Programming Interface}
+    \item[CDMA] \textit{Code Division Multiple Access}
+    \item[GIS] \textit{Geographic Information System}
+    \item[GPRS] \textit{General Packet Radio Service}
+    \item[GPS] \textit{Global Position System}
+    \item[GSM] \textit{Global System for Mobile Communications}
+    \item[IP] \textit{Internet Protocol Address}
+    \item[JSON] \textit{JavaScript Object Notation}
+    \item[TTFF] \textit{Tempo de Localização Inicial}
+    \item[W3C] \textit{World Wide Web Consortium}
+    
+    %\item[] \textit{}
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
