--- a/text-elements/pre-textuais/resumo.tex
+++ b/text-elements/pre-textuais/resumo.tex
@@ -7,14 +7,9 @@
 % \imprimirautorcitacao. \imprimirtitulo. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 % %---------------------------------------------------------------------------------------
 
-O Resumo é um elemento obrigatório em tese, dissertação, monografia e TCC, constituído de uma seqüência de frases concisas e objetivas, fornecendo uma visão rápida e clara do conteúdo do estudo. O texto deverá conter no máximo 500 palavras e ser antecedido
-pela referência do estudo. Também, não deve conter citações. O resumo deve ser redigido em parágrafo único, espaçamento simples e seguido das palavras representativas do conteúdo do estudo, isto é, palavras-chave, em número de três a cinco, separadas entre si por ponto e finalizadas também por ponto. Usar o verbo na terceira pessoa do singular, com linguagem impessoal, bem como fazer uso, preferencialmente, da voz ativa. Texto contendo um único parágrafo.\\
+Devido a falta de tecnologia empregada ao ramo de transportes, mais especificamente aos \textit{motoboys}, que extraviam seu tempo organizando a prévia da rota a cada lote de entrega. Sabendo da importância de cada segundo do trabalho prestado por esses profissionais ao seu ofício, está sendo proposto uma aplicação \textit{web} para gerência de rotas, consumidas através de API de troca de dados (JSON), disponibilizada pelo sistema de pedidos já implantado na empresa, utilizando ferramentas como: Laravel e Google Maps Platform. \\
 
-\textbf{Palavras-chave}: Palavra. Segunda Palavra. Outra palavra.
+\textbf{Palavras-chave}: Laravel. Aplicação Web. Geolocalização. Heroku.
 
 \end{SingleSpacing}
 \end{resumo}
-
-% OBSERVAÇÕES---------------------------------------------------------------------------
-% Altere o texto inserindo o Resumo do seu trabalho.
-% Escolha de 3 a 5 palavras ou termos que descrevam bem o seu trabalho
