--- a/text-elements/textuais/conclusao.tex
+++ b/text-elements/textuais/conclusao.tex
@@ -1,3 +1,3 @@
 % CONCLUSÃO--------------------------------------------------------------------
 
-\chapter{CONCLUSÃO E CONCLUSÃO E TRABALHOS FUTUROS}
+\chapter{CONCLUSÃO E TRABALHOS FUTUROS}
