--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -1,3 +1,19 @@
 % DESENVOLVIMENTO DA APLICAÇÃO-------------------------------------------------------------------
 
 \chapter{DESENVOLVIMENTO DA APLICAÇÃO}
+A proposta para este trabalho foi a construção de uma aplicação que ficaria responsável
+por aguardar e coletar as coordenadas geográficas dos pedidos gerados no estabelecimento,
+juntamente com o desenvolvimento de um servidor encarregado de gerenciar os pedidos como entregas
+com um painel de controle para geração de lotes de entregas e o desenvolvimento de um módulo destinado ao \textit{motoboy}, no qual consegue observar, em um mapa, a posição e pontos de parada que devem ser percorridos no lote disponível para entrega, tudo isso em tempo real.
+
+\section{Softwares utilizados}
+
+\section{Módulo de gerenciamento}
+
+\subsection{Coleta de dados}
+
+\subsection{Painel de gerenciamento}
+
+\subsection{Consulta de dados}
+
+\section{Módulo de entrega}
