--- a/text-elements/pos-textuais/referencias.tex
+++ b/text-elements/pos-textuais/referencias.tex
@@ -2,7 +2,7 @@
 
 % Carrega o arquivo "exemplo-referencias.bib" e extrai automaticamente as referências citadas
 {\renewcommand{\contentsname}{MAC}}
-\bibliography{./exemplo-referencias}
+\bibliography{./referencias}
 \bibliographystyle{abntex2-alf} % Define o estilo ABNT para formatar a lista de referências
 % OBSERVAÇÕES------------------------------------------------------------------
 % Este arquivo não precisa ser alterado.
