--- a/text-elements/pre-textuais/abstract.tex
+++ b/text-elements/pre-textuais/abstract.tex
@@ -7,13 +7,9 @@
 % \imprimirautorcitacao. \imprimirtitleabstract. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 % %---------------------------------------------------------------------------------------
 
-Elemento obrigatório em tese, dissertação, monografia e TCC. É a versão do resumo em português para o idioma de divulgação internacional. Deve ser antecedido pela referência do estudo. Deve aparecer em folha distinta do resumo em língua portuguesa e seguido das palavras representativas do conteúdo do estudo, isto é, das palavras-chave. Sugere-se a elaboração do resumo (Abstract) e das palavras-chave (Keywords) em inglês; para resumos em outras línguas, que não o inglês, consultar o departamento / curso de origem.\\
+ABSTRACT\\
 
-\textbf{Keywords}: Word. Second Word. Another word.
+\textbf{Keywords}: Laravel. Web Application. Geolocation. Heroku.
 
 \end{SingleSpacing}
 \end{resumo}
-
-% OBSERVAÇÕES---------------------------------------------------------------------------
-% Altere o texto inserindo o Abstract do seu trabalho.
-% Escolha de 3 a 5 palavras ou termos que descrevam bem o seu trabalho
