--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -1,3 +1,18 @@
 % INTRODUÇÃO-------------------------------------------------------------------
 
 \chapter{INTRODUÇÃO}
+
+Atualmente existem aplicações cruciais para facilitar a organização que um dia corrido necessita, como: lista de tarefas para você se lembrar de coisas que não podem ser esquecidas, GPS inteligente para guiar você sempre pelos melhores caminhos em sua cidade e previsão do tempo para nunca mais ser pego de surpresa na rua, são algumas funções de grande auxílio na vida de qualquer um. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
+
+Locomoção é uma grande preocupação para quem vive em grandes centros urbanos. Utilizar o carro nem sempre é uma experiência agradável, afinal, não é nada difícil encontrar congestionamentos, principalmente quando é necessário atravessar a cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada \textit{motoboy} surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
+
+No cenário atual, é necessário uma otimização de rotas para estes profissionais da área de transportes que estão suscetíveis a perda de tempo caso não analisadas coerentemente por alguém capacitado. Um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários.
+
+Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto até o destino com dados abrangentes e trânsito em tempo real. Oferecendo experiências personalizadas e ágeis que levam o mundo real até os usuários com mapas estáticos e dinâmicos. 
+
+\begin{citacao}
+Analisamos todos os pontos, desde os recursos de personalização e a capacidade de criar camadas até o acesso ao Street View e a manipulação do ponto de vista, e concluímos que a plataforma do Google Maps atende a todas as nossas necessidades. As alternativas não estavam no mesmo nível, então foi fácil escolher \cite{ElizabethSchreierGoogleMaps}. 
+\end{citacao}
+
+O presente trabalho está estruturado da seguinte maneira: a seção 2 apresenta os objetivos gerais e específicos, a sessão 3 a justificativa do projeto de pesquisa e a seção 4 o referencial teórico.
+Em seguida a seção 5 apresenta a metodologia. Por fim a seção 6 o cronograma de atividades.
