--- a/uri-tcc.tex
+++ b/uri-tcc.tex
@@ -34,7 +34,7 @@
 % \imprimirfolhadeaprovacao
 % INSERE ELEMENTOS PRÉ-TEXTUAIS
 %\include{text-elements/pre-textuais/dedicatoria}          			   % Dedicatória
-%\include{text-elements/pre-textuais/agradecimentos}        			   % Agradecimentos
+\include{text-elements/pre-textuais/agradecimentos}        			   % Agradecimentos
 %\include{text-elements/pre-textuais/epigrafe}              			   % Epígrafe
 \include{text-elements/pre-textuais/resumo}             			   % Resumo em Português
 \include{text-elements/pre-textuais/abstract}             		           % Resumo em Inglês
