--- a/referencias.bib
+++ b/referencias.bib
@@ -1,6 +1,11 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
 
+@Book{autor:2019,
+  Author                   = {Autor},
+  Year                     = {2019}
+}
+
 @misc{ElizabethSchreierGoogleMaps,
   Title                   = {Allstate: Helping agents build better relationships with customers},
   Author                  = {Elizabeth Schreier},
@@ -17,13 +22,6 @@
   Urlaccessdate           = {01 de maio de 2019}
 }
 
-@misc{geospatial:2009,
-  Title                   = {Mashup Mania with Google Maps},
-  Author                  = {Geospatial},
-  Year                    = {2009},
-  Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
-  Urlaccessdate           = {09 de maio de 2019}
-}
 @misc{google:2019,
   Title                   = {Google Maps Platform},
   Author                  = {Google},
@@ -61,6 +59,13 @@
   author={Wesley Gildo Canducci Polezel, Eniuce Menezes de Souza, Jo{\~a}o Francisco Galera Monico},
   year={2004},
   publisher={COBRAC}
+}
+@article{geospatial:2009,
+  Title                   = {Mashup Mania with Google Maps},
+  Author                  = {Geospatial},
+  Year                    = {2009},
+  %Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
+  %Urlaccessdate           = {09 de maio de 2019}
 }
 
 %-------------------------------
