--- a/text-elements/pre-textuais/abstract.tex
+++ b/text-elements/pre-textuais/abstract.tex
@@ -7,9 +7,9 @@
 % \imprimirautorcitacao. \imprimirtitleabstract. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 % %---------------------------------------------------------------------------------------
 
-ABSTRACT\\
+ABSTRACT \\
 
-\textbf{Keywords}: Laravel. Web Application. Geolocation. Heroku.
+\textbf{Keywords}: 
 
 \end{SingleSpacing}
 \end{resumo}
