--- a/text-elements/pre-textuais/agradecimentos.tex
+++ b/text-elements/pre-textuais/agradecimentos.tex
@@ -3,7 +3,7 @@
 \begin{resumo}[AGRADECIMENTOS]
 \begin{SingleSpacing}
 
-A minha família Claudete, Gilmar e Samanta que nunca mediram esforços durante esta longa jornada, sempre estando ao meu lado, me apoiando e me corrigindo nos devidos momentos, permitindo que tudo isso acontecesse ao longa da minha vida e não somente nestes anos como universitário, mas em todos os momentos. Agradeço também minha namorada Andrielle, que sempre foi compreensível diante do tempo investido a este trabalho, me dando apoio e incentivo, além de estar sempre disponível para ajudar como possível ao longo do trabalho e aguentando meus assuntos tecnológicos entendiantes. Merecem agradecimento também os professores do curso de Ciência da Computação por todo o conhecimento, manifestação do caráter, confiança e ética da educação no processo de formação profissional. Também agradeço aos amigos, companheiros de trabalhos e irmãos na amizade, de forma especial ao Prof. Dr. Guilherme Afonso Madalozzo por todo auxílio durante o desenvolvimento do trabalho. A todos que direta ou indiretamente fizeram parte da minha formação, o meu muito obrigado.
+A minha família Claudete, Gilmar e Samanta que nunca mediram esforços durante esta longa jornada, sempre estando ao meu lado, me apoiando e me corrigindo nos devidos momentos, permitindo que tudo isso acontecesse ao longa da minha vida e não somente nestes anos como universitário, mas em todos os momentos. Agradeço também minha namorada Andrielle, que sempre foi compreensível diante do tempo investido a este trabalho, me dando apoio e incentivo, além de estar sempre disponível para ajudar como possível ao longo do trabalho e aguentando meus assuntos tecnológicos entendiantes. Merecem agradecimento também os professores do curso de Ciência da Computação por todo o conhecimento, manifestação do caráter, confiança e ética da educação no processo de formação profissional. Também agradeço aos amigos e companheiros de trabalhos, de forma especial ao Prof. Dr. Guilherme Afonso Madalozzo por todo auxílio durante o desenvolvimento do trabalho. A todos que direta ou indiretamente fizeram parte da minha formação, o meu muito obrigado.
 
 \end{SingleSpacing}
 \end{resumo}
