--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -13,7 +13,10 @@
     \item[GSM] \textit{Global System for Mobile Communications}
     \item[IP] \textit{Internet Protocol Address}
     \item[JSON] \textit{JavaScript Object Notation}
-    \item[TTFF] \textit{Tempo de Localização Inicial}
+    \item[MVC] \textit{Model-View-Controller}
+    \item[ORM] \textit{Object Relational Mapper}
+    \item[PHP] \textit{Hypertext Preprocessor}
+    \item[TTFF] Tempo de Localização Inicial
     \item[W3C] \textit{World Wide Web Consortium}
     
     %\item[] \textit{}
