--- a/text-elements/textuais/desenvolvimento/descricao-sistema.tex
+++ b/text-elements/textuais/desenvolvimento/descricao-sistema.tex
@@ -1,3 +1,5 @@
 % DESCRIÇÃO DA APLICAÇÃO-------------------------------------------------------------------
 
 \chapter{DESCRIÇÃO DA APLICAÇÃO}
+
+Neste capítulo serão apresentadas as funcionalidades do aplicativo apresentado neste trabalho. O mesmo ainda não possui um nome ou logo representante.
