--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -6,8 +6,6 @@ trabalho.
 
 \section{Google Maps}
 
-\section{PhpStorm}
-
 \section{PHP}
 
 \section{Laravel}
@@ -18,4 +16,4 @@ trabalho.
 
 \section{XAMPP}
 
-\section{Heroku}
+%\section{Heroku}
