--- a/uri-tcc.tex
+++ b/uri-tcc.tex
@@ -39,8 +39,8 @@
 \include{text-elements/pre-textuais/resumo}             			   % Resumo em Português
 \include{text-elements/pre-textuais/abstract}             		           % Resumo em Inglês
 \include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-figuras}   % Lista de Figuras
-\include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
-\include{text-elements/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
+%\include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
+%\include{text-elements/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
 \include{text-elements/pre-textuais/listas/lista-siglas}          		   % Lista de Abreviaturas e Siglas
 %\include{text-elements/pre-textuais/listas/lista-simbolos}        		   % Lista de Símbolos
 %\include{text-elements/pre-textuais/listas/listas-diversas/lista-algoritmos}   % Lista de Algoritmos
