--- a/text-elements/pre-textuais/resumo.tex
+++ b/text-elements/pre-textuais/resumo.tex
@@ -7,9 +7,9 @@
 % \imprimirautorcitacao. \imprimirtitulo. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 % %---------------------------------------------------------------------------------------
 
-Devido a falta de tecnologia empregada ao ramo de transportes, mais especificamente aos \textit{motoboys}, que extraviam seu tempo organizando a prévia da rota a cada lote de entrega. Sabendo da importância de cada segundo do trabalho prestado por esses profissionais ao seu ofício, está sendo proposto uma aplicação \textit{web} para gerência de rotas, consumidas através de API de troca de dados (JSON), disponibilizada pelo sistema de pedidos já implantado na empresa, utilizando ferramentas como: Laravel e Google Maps Platform. \\
+Devido a falta de tecnologia empregada ao ramo de transportes, mais especificamente aos motoboys, que extraviam seu tempo organizando a prévia da rota a cada lote de entrega, percorrendo quilômetros desnecessários entre transporte e agrupando de maneira errônea seu trajeto momentâneo. Sabendo da importância de cada segundo do trabalho prestado por esses profissionais ao seu ofício, está sendo proposta uma aplicação web para gerenciamento das entregas de seus respectivos pedidos, consumidos através de uma API de troca de dados, disponibilizada pelo sistema já implantado na empresa e operando plenamente, utilizando ferramentas como: Laravel e Google Maps, oferecendo uma solução significativa na economia de tempo para os usuários envolvidos no produto a ser entregue, desviando congestionamentos e indicando à melhor trajetória em tempo real. A rota devidamente planejada pela aplicação, com possível intervenção do usuário administrador para melhoria, será apresentada para o motoboy em seu \textit{smartphone}. \\
 
-\textbf{Palavras-chave}: Laravel. Aplicação Web. Geolocalização. Heroku.
+\textbf{Palavras-chave}: Gerenciamento de rotas de entrega. Aplicação Web. Geolocalização. Google Maps.
 
 \end{SingleSpacing}
 \end{resumo}
