--- a/text-elements/pos-textuais/apendices.tex
+++ b/text-elements/pos-textuais/apendices.tex
@@ -7,4 +7,9 @@
 \chapter{Diagrama de Classes}
 \label{chap:apendiceA}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{./dados/figuras/apendiceA}
+\end{figure}
+
 \end{apendicesenv}
