--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -7,19 +7,21 @@
     \item[AJAX] \textit{Asynchronous JavaScript and XML}
     \item[API] \textit{Application Programming Interface}
     \item[CDMA] \textit{Code Division Multiple Access}
+    \item[CLI] \textit{Command Line Interfaces}
     \item[GIS] \textit{Geographic Information System}
     \item[GPRS] \textit{General Packet Radio Service}
     \item[GPS] \textit{Global Position System}
     \item[GSM] \textit{Global System for Mobile Communications}
+    \item[HTML] \textit{HyperText Markup Language}
+    \item[HTTP] \textit{Hypertext Transfer Protocol}
     \item[IP] \textit{Internet Protocol Address}
+    \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
+    \item[LTI] \textit{Long Term Support}
     \item[MVC] \textit{Model-View-Controller}
     \item[ORM] \textit{Object Relational Mapper}
-    \item[PHP] \textit{Hypertext Preprocessor}
+    \item[PHP] \textit{Personal Home Page}
     \item[TTFF] Tempo de Localização Inicial
-    \item[W3C] \textit{World Wide Web Consortium}
-    
-    %\item[] \textit{}
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
