--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -4,11 +4,18 @@
 Neste capítulo estão descritas as ferramentas utilizadas para desenvolvimento deste
 trabalho.
 
-\section{Google Maps}
+%\section{PHP}
 
-\section{PHP}
+\section{Laravel} 
 
-\section{Laravel}
+\begin{figure}[H]
+    \centering
+    \caption{History of Laravel Releases}
+    \includegraphics[width=0.9\textwidth]{./dados/figuras/fig8}
+    \fonte{\citeonline{LaravelRelease:2019}}
+    \label{fig:LaravelRelease}
+\end{figure}
+
 
 \section{Apache}
 
