--- a/referencias.bib
+++ b/referencias.bib
@@ -1,11 +1,5 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
-
-@Book{autor:2019,
-  Author                   = {Autor},
-  Year                     = {2019}
-}
-
 @misc{ElizabethSchreierGoogleMaps,
   Title                   = {Allstate: Helping agents build better relationships with customers},
   Author                  = {Elizabeth Schreier},
@@ -36,6 +30,14 @@
   Year                    = {2019},
   Url                     = {https://www.google.com.br/maps},
   Urlaccessdate           = {06 de agosto de 2019}
+}
+
+@misc{LaravelRelease:2019,
+  Title                   = {Laravel Release Process},
+  Author                  = {Eric L. Barnes},
+  Year                    = {2019},
+  Url                     = {https://laravel-news.com/laravel-release-process},
+  Urlaccessdate           = {12 de agosto de 2019}
 }
 
 @misc{oficinanetagps:2018,
